# ASMCDD

./: .gitignore  CMakeLists.txt  Camera.cpp  Mesh.cpp  Program.cpp  Readme.md  Scene.cpp  Shader.cpp  main.cpp  utils.cpp
configs/: constrained.txt  constrained_overlap.txt  forest.txt  forest_no_interaction.txt  praise_the_sun.txt  zerg_rush.txt
examples/: droplets.txt  ex_video.txt  forest_small.txt  mediterranean.txt  mediterranean_dense.txt  table.txt  toy_0.txt  toy_1.txt  toy_2.txt  toy_3.txt
include/: ASMCDD.h  Camera.h  Category.h  Graph.h  LinePlot.h  Mesh.h  Program.h  Scene.h  Shader.h  Vec3.h  computeFunctions.h  tinyply.h  utils.h
models/: champi.ply  grass.ply  mutalisk.ply  praise.ply  praise_statue.ply  tree.ply
shaders/: 3D.frag  3D.vert  Disks.frag  Disks.geom  Disks.vert  Plot.vert
src/: ASMCDD.cpp  Camera.cpp  Category.cpp  Graph.cpp  LinePlot.cpp  Mesh.cpp  Program.cpp  Scene.cpp  Shader.cpp  computeFunctions.cpp  utils.cpp
